# hip-on-nv

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/hip/: hip_runtime.h  hip_runtime.inl  hiprtc.h  hiprtc.inl
src/: CMakeLists.txt  hipnv.cpp
test/: t.cu
